force-app/main/default/objects/Product2/fields/cUnite__Amenities__c.field-meta.xml
<CustomField>
    <fullName>cUnite__Amenities__c</fullName>
    <label>Amenities</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>