force-app/main/default/objects/Product2/fields/cUnite__Gender__c.field-meta.xml
<CustomField>
    <fullName>cUnite__Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Women&apos;s</fullName>
            </value>
            <value>
                <fullName>Men&apos;s</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>