force-app/main/default/objects/Product2/fields/cUnite__Image_URL__c.field-meta.xml
<CustomField>
    <fullName>cUnite__Image_URL__c</fullName>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>