force-app/main/default/objects/Product2/fields/cUnite__Max_Guests__c.field-meta.xml
<CustomField>
    <fullName>cUnite__Max_Guests__c</fullName>
    <label>Max Guests</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>