force-app/main/default/objects/Product2/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <label>Display Order</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>