force-app/main/default/objects/Product2/fields/Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Model__c</fullName>
    <label>Pricing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Person</fullName>
            </value>
            <value>
                <fullName>Per Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>